[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/DialogBox.gd" type="Script" id=1]

[node name="Polygon2D" type="Polygon2D"]
modulate = Color( 1, 1, 1, 0.631373 )
color = Color( 0, 0, 0, 0.592157 )
polygon = PoolVector2Array( 48, 368, 48, 304, 592, 304, 592, 368 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 64.0
margin_top = 320.0
margin_right = 576.0
margin_bottom = 352.0
bbcode_enabled = true
bbcode_text = "
"
text = "
"
script = ExtResource( 1 )

[node name="Timer2" type="Timer" parent="RichTextLabel"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.03
autostart = true
[connection signal="timeout" from="RichTextLabel/Timer2" to="RichTextLabel" method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="RichTextLabel" method="_on_Timer_timeout"]
